src/objects/Part_Aging_Detail__c.object
<CustomObject>
    <fields>
        <fullName>PRD1Cost__c</fullName>
        <label>PRD1Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PRD1Qty__c</fullName>
        <label>PRD1Qty</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PRD2Cost__c</fullName>
        <label>PRD2Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PRD2Qty__c</fullName>
        <label>PRD2Qty</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PRD3Cost__c</fullName>
        <label>PRD3Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PRD3Qty__c</fullName>
        <label>PRD3Qty</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Part__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Part</label>
        <referenceTo>Part__c</referenceTo>
        <relationshipLabel>Part Aging Details</relationshipLabel>
        <relationshipName>Part_Aging_Details</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Modified_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last Modified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Part_Aging_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Modified_Date__c</fullName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <label>Part Aging Detail</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PADN-{00000000}</displayFormat>
        <label>Part Aging Detail Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Part Aging Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>